--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Mydeploy
+  name: mydeploy
 spec:
   replicas: 2
   selector:
@@ -13,7 +13,7 @@ spec:
         name: myapp  
     spec:
       containers:
-        - name: Mycont
-          image: shaikmustafa/dm
-          ports:
-            - containerPort: 80
+      - name: mycont
+        image: shaikmustafa/mygame
+        ports:
+        - containerPort: 80
